force-app/main/default/objects/C360Integration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AllocationEndpointAllocation_MonthlyTLB__c</fullName>
        <label>Allocation Endpoint Allocation Month TLB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_AuthorizePassword__c</fullName>
        <label>Allocation Authorize Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_AuthorizeUsername__c</fullName>
        <label>Allocation Authorize Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_EndpointAllocationMonthly__c</fullName>
        <label>Allocation Endpoint Allocation Monthly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_EndpointLiftingMonthly__c</fullName>
        <label>Allocation Endpoint Lifting Monthly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_AuthorizePassword__c</fullName>
        <label>BI Authorize Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_AuthorizeUsername__c</fullName>
        <label>BI Authorize Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointBuyingActualDaily__c</fullName>
        <description>BI Endpoint Buying Performance Daily</description>
        <label>BI Endpoint Buying Actual Daily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointBuyingActualMonthly__c</fullName>
        <label>BI Endpoint Buying Actual Monthly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointBuyingTargetDaily__c</fullName>
        <label>BI Endpoint Buying Target Daily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointBuyingTargetMonthly__c</fullName>
        <label>BI Endpoint Buying Target Monthly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointContractItem__c</fullName>
        <label>BI Endpoint Contract Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointContract__c</fullName>
        <label>BI Endpoint Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointCustomerInvoice__c</fullName>
        <label>BI_EndpointCustomerInvoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointCustomerPartnerFunction__c</fullName>
        <label>BI Endpoint Customer Partner Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointCustomerSalesAreaTS__c</fullName>
        <label>BI Endpoint Customer SalesArea TS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointCustomerSalesArea__c</fullName>
        <label>BI Endpoint Customer SalesArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointCustomerShipto__c</fullName>
        <label>BI Endpoint Customer Ship-to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointCustomerSoldto__c</fullName>
        <label>BI Endpoint Customer Sold-to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointExciseQuota__c</fullName>
        <label>BI Endpoint Excise Quota</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointFinancial__c</fullName>
        <label>BI Endpoint Financial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointProductMaster__c</fullName>
        <label>BI Endpoint Product Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointProductSalesArea__c</fullName>
        <label>BI Endpoint Product SalesArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointProductUnitConversion__c</fullName>
        <label>BI Endpoint Product Unit Conversion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointReplicateMasterdata__c</fullName>
        <label>BI_EndpointReplicateMasterdata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointReplicateSupplierPurchase__c</fullName>
        <label>BI_EndpointReplicateSupplierPurchase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointReplicateSupplier__c</fullName>
        <label>BI_EndpointReplicateSupplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_EndpointSupplierInvoice__c</fullName>
        <label>BI_EndpointSupplierInvoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRiRPAAPIKey__c</fullName>
        <label>CTRiRPAAPIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRiRPAAdditionalInfoEndpoint__c</fullName>
        <label>CTRiRPAAdditionalInfoEndpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRiRPAClientId__c</fullName>
        <label>CTRiRPAClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRiRPANaccEndpoint__c</fullName>
        <label>CTRiRPANaccEndpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRiRPANaccInfoEndpoint__c</fullName>
        <label>CTRiRPANaccInfoEndpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRiRPASanctionEndpoint__c</fullName>
        <label>CTRiRPASanctionEndpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRiRPASecretId__c</fullName>
        <label>CTRiRPASecretId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRiRPATokenEndpoint__c</fullName>
        <label>CTRiRPATokenEndpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractMigration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractRange__c</fullName>
        <label>Contract Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeletedBatchSize__c</fullName>
        <description>For use delete Daily Buying Performance (Job Clear data Schedule)</description>
        <label>Deleted Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeletedDays__c</fullName>
        <description>For use delete Daily Buying Performance (Job Clear data Schedule)</description>
        <label>Deleted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HerokuIntegrationDomain__c</fullName>
        <label>Heroku Integration Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NonSAP_EndpointCustomerSalesAreaTS__c</fullName>
        <label>Non-SAP Endpoint Customer SalesArea TS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonSAP_EndpointCustomerShipto__c</fullName>
        <label>Non-SAP Endpoint Customer Ship-to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonSAP_EndpointCustomerSoldto__c</fullName>
        <label>Non-SAP Endpoint Customer Sold-to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonSAP_EndpointFinancial__c</fullName>
        <label>Non-SAP Endpoint Financial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonSAP_EndpointProductMaster__c</fullName>
        <label>Non-SAP Endpoint Product Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonSAP_EndpointProductUnitConversion__c</fullName>
        <label>Non-SAP Endpoint Product Unit Conversion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePointMainFolderDuringCreate__c</fullName>
        <label>SharePoint Main Folder (During Create)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_ApplicationID__c</fullName>
        <label>SharePoint ApplicationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_ClientID__c</fullName>
        <label>SharePoint ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_ClientSecret__c</fullName>
        <label>SharePoint ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Document_Folder__c</fullName>
        <label>SharePoint Document Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_EndpointGetToken__c</fullName>
        <label>SharePoint EndpointGetToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_RefreshToken__c</fullName>
        <label>SharePoint RefreshToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_SiteName__c</fullName>
        <label>SharePoint SiteName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_TenantID__c</fullName>
        <label>SharePoint TenantID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_TenantName__c</fullName>
        <label>SharePoint TenantName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yesterday__c</fullName>
        <description>For migration</description>
        <label>Yesterday</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iRPA_API_Key_Header__c</fullName>
        <label>iRPA_API_Key_Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_API_Key__c</fullName>
        <label>iRPA_API_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Client_Id__c</fullName>
        <label>iRPA_Client_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Client_Secret_Id__c</fullName>
        <label>iRPA_Client_Secret_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Customer_Endpoint__c</fullName>
        <label>iRPA Customer Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_FinancialInfo_Endpoint__c</fullName>
        <label>iRPA_FinancialInfo_Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Supplier_Endpoint__c</fullName>
        <label>iRPA Supplier Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Token_Endpoint__c</fullName>
        <label>iRPA_Token_Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>C360Integration</label>
</CustomObject>